FAB social media link has same origin restriction -- need to fix that

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -75,4 +75,16 @@
     <h4>{{leaderErrMess}}</h4>
   </div>
   
+  <ion-fab right bottom>
+    <button ion-fab color="accent"><ion-icon name="arrow-dropup"></ion-icon></button>
+    <ion-fab-list side="top">
+      <a ion-fab class="btn-mail" href="mailto:confusion@food.net"><ion-icon name="mail"></ion-icon></a>
+      <a ion-fab class="btn-google-plus" href="http://www.plus.google.com"><ion-icon name="logo-googleplus"></ion-icon></a>
+      <a ion-fab class="btn-youtube" href="http://www.youtube.com"><ion-icon name="logo-youtube"></ion-icon></a>
+      <a ion-fab class="btn-facebook" href="http://www.facebook.com"><ion-icon name="logo-facebook"></ion-icon></a>
+      <a ion-fab class="btn-twitter" href="http://www.twitter.com"><ion-icon name="logo-twitter"></ion-icon></a>
+      <a ion-fab class="btn-linkedin" href="http://www.linkedin.com"><ion-icon name="logo-linkedin"></ion-icon></a>
+      
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
