--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -25,4 +25,13 @@
     </ion-card>
   </div>
 
+  <div [hidden]="dishes || errMess">
+    <ion-spinner></ion-spinner>
+    <h4>Loading... Please Wait</h4>
+  </div>
+
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
 </ion-content>
