--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -62,7 +62,7 @@
   </ion-fab>
 
   <ion-fab bottom right *ngIf="favorite">
-    <button ion-fab>
+    <button ion-fab (click)="removeFromFavorites()">
       <ion-icon name="heart"></ion-icon>
     </button>
   </ion-fab>
