--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,73 +8,82 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="dish">
-    <img src="{{BaseURL + dish.image}}" alt="dish.name">
-    <ion-card-content>
-      <ion-card-title>
-        {{dish.name || uppercase}}
-      </ion-card-title>
-      <p>
-        {{dish.description}}
-      </p>
-    </ion-card-content>
-  </ion-card>
+  <ion-grid>
+    <ion-row align-items-center>
+      <ion-col col-12 col-lg-4>
+        <ion-card *ngIf="dish">
+          <img src="{{BaseURL + dish.image}}" alt="dish.name">
+          <ion-card-content>
+            <ion-card-title>
+              {{dish.name || uppercase}}
+            </ion-card-title>
+            <p>
+              {{dish.description}}
+            </p>
+          </ion-card-content>
+        </ion-card>
 
-  <div [hidden]="dish || dishErrMess">
-    <ion-spinner></ion-spinner>
-    <h4>Loading... Please Wait</h4>
-  </div>
+        <div [hidden]="dish || dishErrMess">
+          <ion-spinner></ion-spinner>
+          <h4>Loading... Please Wait</h4>
+        </div>
 
-  <div *ngIf="dishErrMess">
-    <h2>Error</h2>
-    <h4>{{dishErrMess}}</h4>
-  </div>
-  
+        <div *ngIf="dishErrMess">
+          <h2>Error</h2>
+          <h4>{{dishErrMess}}</h4>
+        </div>
+      </ion-col>
 
-  <ion-card *ngIf="promotion">
-    <img src="{{BaseURL + promotion.image}}" alt="promotion.name">
-    <ion-card-content>
-      <ion-card-title>
-        {{promotion.name || uppercase}}
-      </ion-card-title>
-      <p>
-        {{promotion.description}}
-      </p>
-    </ion-card-content>
-  </ion-card>
+      <ion-col col-12 col-lg-4 >
+        <ion-card *ngIf="promotion">
+          <img src="{{BaseURL + promotion.image}}" alt="promotion.name">
+          <ion-card-content>
+            <ion-card-title>
+              {{promotion.name || uppercase}}
+            </ion-card-title>
+            <p>
+              {{promotion.description}}
+            </p>
+          </ion-card-content>
+        </ion-card>
 
-  <div [hidden]="promotion || promoErrMess">
-    <ion-spinner></ion-spinner>
-    <h4>Loading... Please Wait</h4>
-  </div>
+        <div [hidden]="promotion || promoErrMess">
+          <ion-spinner></ion-spinner>
+          <h4>Loading... Please Wait</h4>
+        </div>
 
-  <div *ngIf="promoErrMess">
-    <h2>Error</h2>
-    <h4>{{promoErrMess}}</h4>
-  </div>
+        <div *ngIf="promoErrMess">
+          <h2>Error</h2>
+          <h4>{{promoErrMess}}</h4>
+        </div>
+      </ion-col>
 
-  <ion-card *ngIf="leader">
-    <img src="{{BaseURL + leader.image}}" alt="leader.name">
-    <ion-card-content>
-      <ion-card-title>
-        {{leader.name || uppercase}}
-      </ion-card-title>
-      <p>
-        {{leader.description}}
-      </p>
-    </ion-card-content>
-  </ion-card>
+      <ion-col col-12 col-lg-4>
+        <ion-card  *ngIf="leader">
+          <img src="{{BaseURL + leader.image}}" alt="leader.name">
+          <ion-card-content>
+            <ion-card-title>
+              {{leader.name || uppercase}}
+            </ion-card-title>
+            <p>
+              {{leader.description}}
+            </p>
+          </ion-card-content>
+        </ion-card>
 
-  <div [hidden]="leader || leaderErrMess">
-    <ion-spinner></ion-spinner>
-    <h4>Loading... Please Wait</h4>
-  </div>
+        <div [hidden]="leader || leaderErrMess">
+          <ion-spinner></ion-spinner>
+          <h4>Loading... Please Wait</h4>
+        </div>
 
-  <div *ngIf="leaderErrMess">
-    <h2>Error</h2>
-    <h4>{{leaderErrMess}}</h4>
-  </div>
-  
+        <div *ngIf="leaderErrMess">
+          <h2>Error</h2>
+          <h4>{{leaderErrMess}}</h4>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <ion-fab right bottom>
     <button ion-fab color="accent"><ion-icon name="arrow-dropup"></ion-icon></button>
     <ion-fab-list side="top">
@@ -84,7 +93,7 @@
       <a ion-fab class="btn-facebook" href="http://www.facebook.com"><ion-icon name="logo-facebook"></ion-icon></a>
       <a ion-fab class="btn-twitter" href="http://www.twitter.com"><ion-icon name="logo-twitter"></ion-icon></a>
       <a ion-fab class="btn-linkedin" href="http://www.linkedin.com"><ion-icon name="logo-linkedin"></ion-icon></a>
-      
     </ion-fab-list>
   </ion-fab>
+
 </ion-content>
