--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -17,13 +17,19 @@
 
 
 <ion-content class="card-background-image">
-  <div *ngIf="dishes">
-    <ion-card *ngFor="let dish of dishes" (click)="dishSelected($event, dish)" (pan)="addToFavorites(dish)">
-      <img src="{{BaseURL + dish.image}}" alt="dish.name">
-      <div class="card-title">{{dish.name}}</div>
-      <div class="card-subtitle">{{dish.description}}</div>
-    </ion-card>
-  </div>
+  <ion-grid *ngIf="dishes">
+    <ion-row>
+      <ion-col col-12 col-lg-3 *ngFor="let dish of dishes">
+        <div>
+          <ion-card  (click)="dishSelected($event, dish)" (pan)="addToFavorites(dish)">
+            <img src="{{BaseURL + dish.image}}" alt="dish.name">
+            <div class="card-title">{{dish.name}}</div>
+            <div class="card-subtitle">{{dish.description}}</div>
+          </ion-card>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <div [hidden]="dishes || errMess">
     <ion-spinner></ion-spinner>
