--- a/src/pages/reservation/reservation.html
+++ b/src/pages/reservation/reservation.html
@@ -43,6 +43,6 @@
       <ion-datetime displayFormat="MMM DD,YYYY hh:mm A" pickerFormat="MMM DD,YYYY hh:mm A" formControlName="dateTime"></ion-datetime>
     </ion-item>
 
-    <button ion-button type="submit" [disabled]="reservation.invalid">Reserve</button>
+    <button ion-button type="submit" color="primary" [disabled]="reservation.invalid">Reserve</button>
   </form>
 </ion-content>
