--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -19,46 +19,54 @@
 
 
 <ion-content padding>
-  <ion-card *ngIf="dish">
-    <img src="{{BaseURL + dish.image}}" alt="dish.name">
-    <ion-card-content>
-      <ion-card-title>
-        {{dish.name || uppercase}}
-      </ion-card-title>
-      <p>
-        {{dish.description}}
-      </p>
-    </ion-card-content>
+  <ion-grid>
+    <ion-row align-items-center>
+      <ion-col col-12 col-lg-6>
+        <ion-card *ngIf="dish">
+          <img src="{{BaseURL + dish.image}}" alt="dish.name">
+          <ion-card-content>
+            <ion-card-title>
+              {{dish.name | uppercase}}
+            </ion-card-title>
+            <p>
+              {{dish.description}}
+            </p>
+          </ion-card-content>
 
-    <ion-col>
-        <ion-row>
-          <button ion-button icon-left clear small>
-            <ion-icon name="star"></ion-icon>
-            <div>{{avgStars}} Stars</div>
-          </button>
-        </ion-row>
-    
-        <ion-row>
-          <button ion-button icon-left clear small>
-            <ion-icon name="text"></ion-icon>
-            <div> {{numComments}} Comments</div>
-          </button>
-        </ion-row>
+          <ion-col>
+              <ion-row>
+                <button ion-button icon-left clear small>
+                  <ion-icon name="star"></ion-icon>
+                  <div>{{avgStars}} Stars</div>
+                </button>
+              </ion-row>
+          
+              <ion-row>
+                <button ion-button icon-left clear small>
+                  <ion-icon name="text"></ion-icon>
+                  <div> {{numComments}} Comments</div>
+                </button>
+              </ion-row>
+            </ion-col>
+        </ion-card>
       </ion-col>
-  </ion-card>
 
-  <ion-list *ngIf="dish">
-    <ion-list-header>
-      Comments
-    </ion-list-header>
-    <ion-item *ngFor="let comment of dish.comments" text-wrap>
-      <h4>{{comment.comment}}</h4>
-      <p>{{comment.rating}} Stars</p>
-      <p>
-        <span> -- {{comment.author}} {{comment.date | date}} </span>
-      </p>
-    </ion-item>
-  </ion-list>
+      <ion-col col-12 col-lg-6>
+        <ion-list *ngIf="dish">
+          <ion-list-header>
+            Comments
+          </ion-list-header>
+          <ion-item *ngFor="let comment of dish.comments" text-wrap>
+            <h4>{{comment.comment}}</h4>
+            <p>{{comment.rating}} Stars</p>
+            <p>
+              <span> -- {{comment.author}} {{comment.date | date}} </span>
+            </p>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <ion-fab bottom right [hidden]="favorite">
     <button ion-fab (click)="addToFavorites()">
