--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -37,4 +37,7 @@
     <button ion-button type="submit" color="primary" [disabled]="loginForm.invalid">Submit</button>
   </form>
 
+  <p>Do you have an account ? then </p>
+  <button color="primary" ion-button (click)="openRegister()">Register</button>
+
 </ion-content>
